--- a/SGPROLANGUAGES.az/global css/global.css
+++ b/SGPROLANGUAGES.az/global css/global.css
@@ -101,7 +101,7 @@ body {
 }
 
 .footer {
-  background: rgba(0, 0, 0, 0.6);
+  background: #161c2d;
   border-radius: 30px;
   padding: 60px 80px;
   width: 100%;
